demo/deploy/00-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: autohtml
  labels:
    app: autohtml
