demo/deploy/autohtml-service.yml
apiVersion: v1
kind: Service
metadata:
  name: autohtml-service
spec:
  selector:
    app: autohtml
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9292
