demo/deploy/autohtml-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autohtml-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
   - hosts:
     - "autohtml.rors.org"
     secretName: "autohtml-tls"
  rules:
  - host: "autohtml.rors.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: autohtml-service
            port:
              number: 80
